@@ -378,13 +378,12 @@ void COctTreeSceneNode::deserializeAttributes(io::IAttributes* in, io::SAttribut
 
 		if (newMesh)
 		{
-/*
-			if (Mesh)
-				Mesh->drop();
+		//	if (Mesh)
+		//		Mesh->drop();
 
-			Mesh = newMesh;
-			Mesh->grab();
-*/
+		//	Mesh = newMesh;
+		//	Mesh->grab();
+
 			loadedNewMesh = true;
 		}
 	}
@@ -394,7 +393,7 @@ void COctTreeSceneNode::deserializeAttributes(io::IAttributes* in, io::SAttribut
 		// recalculate tree
 		//createTree(Mesh);
 		createTree ( newMesh );
-		newMesh->drop ();
+		// newMesh->drop ();
 	}
 
 	ISceneNode::deserializeAttributes(in, options);
